# nimble_lz4

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  mix.exs
.github/workflows/: main.yml  release.yml  rust-ci.yml
benchmarks/: compress.exs  decompress.exs
lib/: nimble_lz4.ex
native/nimblelz4/: Cargo.toml  README.md
native/nimblelz4/.cargo/: config
native/nimblelz4/src/: lib.rs
test/: nimble_lz4_test.exs
