[package]
name = "nimblelz4"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "nimblelz4"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.29", default-features = false, features = [
    "derive",
    "nif_version_2_15",
] }
lz4_flex = { version = "0.11.0" }
